[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
log = "0.4.22"
env_logger = "0.11.5"
clap = { version = "4.5.20", features = ["derive"] }
async-trait = "0.1.83"
futures = "0.3.31"
futures-util = "0.3.31"
chrono = "0.4.38"
anyhow = "1.0.92"
base64 = "0.22.1"
reqwest = "0.12.9"
hmac = "0.12.1"
sha2 = "0.10.8"
quick-protobuf = "0.8.1"
